// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User-Search Component should match snapshot 1`] = `
<div
  className="s_d_peo"
  onClick={[Function]}
>
  <Link
    className="s_d_p"
    to="/profile/ghalib"
  >
    <img
      src="/users/7/avatar.jpg"
    />
    <div
      className="s_d_c"
    >
      <span
        className="s_d_username"
      >
        ghalib
      </span>
      <span>
        Mirza Ghalib
      </span>
    </div>
  </Link>
</div>
`;

exports[`User-Search Component should match snapshot with mutual followers also hiding firstname & surname 1`] = `
<div
  className="s_d_peo"
  onClick={[Function]}
>
  <Link
    className="s_d_p"
    to="/profile/ghalib"
  >
    <img
      src="/users/7/avatar.jpg"
    />
    <div
      className="s_d_c"
    >
      <span
        className="s_d_username"
      >
        ghalib
      </span>
      <span>
        3 mutual followers
      </span>
    </div>
  </Link>
</div>
`;
